--- a/csc470/views/classes/current.ejs
+++ b/csc470/views/classes/current.ejs
@@ -13,7 +13,7 @@
 
 	<% var classList = user.classesInProgress %> 
 	<% for (var i=0; i<classList.length; i++) { %><% var course_json = JSON.stringify(classList[i]) %>
-	<div class="list-group-item col-md-10 col-md-push-1 col-md-pull-1">
+	<div class="list-group-item col-md-10 col-md-push-1 col-md-pull-1 col-centered">
 		<div class="row bg-primary">
 			<div class="col-md-4">
 				<h4><%= classList[i]._name %></h4>
@@ -78,7 +78,7 @@
 
 	<% var classList = user.classesSignedUpfor %> 
 	<% for (var i=0; i<classList.length; i++) { %><% var course_json = JSON.stringify(classList[i]) %>
-	<div class="list-group-item col-md-10 col-md-push-1 col-md-pull-1">
+	<div class="list-group-item col-md-10 col-md-push-1 col-md-pull-1 col-centered">
 		<div class="row bg-info">
 			<div class="col-md-4">
 				<h4><%= classList[i]._name %></h4>
@@ -144,7 +144,7 @@
 
 	<% var classList = user.classesWaitlisted %> 
 	<% for (var i=0; i<classList.length; i++) { %><% var course_json = JSON.stringify(classList[i]) %>
-	<div class="list-group-item col-md-10 col-md-push-1 col-md-pull-1">
+	<div class="list-group-item col-md-10 col-md-push-1 col-md-pull-1 col-centered">
 		<div class="row bg-warning">
 			<div class="col-md-4">
 				<h4><%= classList[i]._name %></h4>
@@ -209,7 +209,7 @@
 
 	<% var classList = user.classesFinished %> 
 	<% for (var i=0; i<classList.length; i++) { %><% var course_json = JSON.stringify(classList[i]) %>
-	<div class="list-group-item col-md-10 col-md-push-1 col-md-pull-1">
+	<div class="list-group-item col-md-10 col-md-push-1 col-md-pull-1 col-centered">
 		<div class="row bg-success">
 			<div class="col-md-4">
 				<h4><%= classList[i]._name %></h4>
@@ -272,9 +272,9 @@
 	</div> <!-- list-group-item col-md-10 col-md-push-1 col-md-pull-1 -->
 	<% } %>
 
-	<% var classList = classes_needed %> <% var course_json = JSON.stringify(classList[i]) %>
+	<% var classList = classes_needed %>
 	<% for (var i=0; i<classList.length; i++) { %><% var course_json = JSON.stringify(classList[i]) %>
-	<div class="list-group-item col-md-10 col-md-push-1 col-md-pull-1">
+	<div class="list-group-item col-md-10 col-md-push-1 col-md-pull-1:col-centered">
 		<div class="row bg-danger">
 			<div class="col-md-4">
 				<h4><%= classList[i]._name %></h4>
