--- a/csc470/views/classes/track.ejs
+++ b/csc470/views/classes/track.ejs
@@ -4,18 +4,18 @@
     <% include ../partials/navbar %>
 </head>
 <body class="main" style="margin-top: 5vh;">
-	<div class="conatainer">
+	<div class="container">
 		<div class="row page-header text-center">
 			<h1>Track Progress</h1>
 		</div>
-		<div class="row well col-md-8 col-md-push-2 col-centered">
+		<div class="row well col-md-8 col-md-push-2 col-centered container">
 			<% var aproxSemesters = Math.ceil(credits_left / 15) %>
 			<% if (aproxSemesters <= user.progLength*2) { %>
-			<h2> ON TRACK </h3>
+			<h2 class="row text-success"> ON TRACK </h2>
 			<% } else { %>
-			<h2 class=> BEHIND TRACK </h3>
+			<h2 class="row text-danger"> BEHIND TRACK </h2>
 			<% } %>
-			<p> You want to graduate in <%= user.progLength %> years. 
+			<p> You want to graduate in <b><%= user.progLength %></b> years. 
 			<p style="margin-top: 10px;" class="center"><% if (credits_left > 0){ %> <%= credits_left %> <% } else { %> Zero <% } %> credits are currently unfinished.<p>
 			<p class="center">At 15 credits/semester, you have <%= aproxSemesters %> semesters remaining.<p>
 			<p class="center">To graduate in <%= user.progLength %> years you would need to take <%= credits_left / (user.progLength * 2) %> credits per semester. <p>
