added password change and prototype for checking on password and email, don't change your password right now though because it isn't hashed and you wont be able to log back in if you change it

--- a/csc470/views/account/profile.ejs
+++ b/csc470/views/account/profile.ejs
@@ -25,7 +25,7 @@
 				  <li class="list-group-item"><strong>Name</strong>: <%= user.firstName %> <%= user.lastName %></li>
 				  <li class="list-group-item"><strong>Email</strong>: <%= user.email %></li>
 				  <li class="list-group-item"><strong>Password</strong>: <%= user.password %></li>
-				  <a class="list-group-item list-group-item-action list-group-item-warning" href="/account/changepassword">Change Password</a>
+				  <a class="list-group-item list-group-item-action list-group-item-warning" href="/changePassword">Change Password</a>
 				</ul>
 
       </div>
