--- a/csc470/views/classes/current.ejs
+++ b/csc470/views/classes/current.ejs
@@ -3,7 +3,7 @@
 <head>
     <% include ../partials/navbar %>
 </head>
-<body class="main" style="margin-top: 10vh;">
+<body class="main" style="margin-top: 10vh; margin-bottom: 10vh;">
 <div>
 	<div class="page-header text-center">
 		<h1><span class="fa"></span>Current Class Statuses</h1>
