--- a/csc470/views/classes/track.ejs
+++ b/csc470/views/classes/track.ejs
@@ -8,7 +8,7 @@
 		<div class="row page-header text-center">
 			<h1>Track Progress</h1>
 		</div>
-		<div class="row well col-md-8 col-md-push-2 col-centered container">
+		<div class="row well col-md-8 col-md-push-2 ">
 			<% var aproxSemesters = Math.ceil(credits_left / 15) %>
 			<% if (aproxSemesters <= user.progLength*2) { %>
 			<h2 class="row text-success"> ON TRACK </h2>
