Added credits to current classes

--- a/csc470/views/classes/current.ejs
+++ b/csc470/views/classes/current.ejs
@@ -24,14 +24,17 @@
 		</div> <!--- .row ---!>
 
 		<div style="padding-top:5px;">
+		<div class="row">
 		<% if (classList[i]._preRequisites.length > 0) { %>
-			<div class="row">
-				<p class="col-md-push-1 col-md-10 text-justify">
+				<p class="col-md-push-1 col-md-4 text-justify">
 					Prerequisites:
 					<%= classList[i]._preRequisites %>
 				</p> <!--.col -->
-			</div>
 		<% } %>
+			<p class="col-md-4 col-md-pull-1 text-right pull-right">
+				<%= classList[i]._creditHours %> Credits
+			</p> <!--.col -->
+		</div>
 
 		<div class="row">
 			<p class="col-md-10 text-justify col-md-push-1">
@@ -89,14 +92,17 @@
 		</div> <!--- .row ---!>
 
 		<div style="padding-top:5px;">
+		<div class="row">
 		<% if (classList[i]._preRequisites.length > 0) { %>
-			<div class="row">
-				<p class="col-md-push-1 col-md-10 text-justify">
+				<p class="col-md-push-1 col-md-4 text-justify">
 					Prerequisites:
 					<%= classList[i]._preRequisites %>
 				</p> <!--.col -->
-			</div>
 		<% } %>
+			<p class="col-md-4 col-md-pull-1 text-right pull-right">
+				<%= classList[i]._creditHours %> Credits
+			</p> <!--.col -->
+		</div>
 
 		<div class="row">
 			<p class="col-md-10 text-justify col-md-push-1">
@@ -155,14 +161,17 @@
 		</div> <!--- .row ---!>
 
 		<div style="padding-top:5px;">
+		<div class="row">
 		<% if (classList[i]._preRequisites.length > 0) { %>
-			<div class="row">
-				<p class="col-md-push-1 col-md-10 text-justify">
+				<p class="col-md-push-1 col-md-4 text-justify">
 					Prerequisites:
 					<%= classList[i]._preRequisites %>
 				</p> <!--.col -->
-			</div>
 		<% } %>
+			<p class="col-md-4 col-md-pull-1 text-right pull-right">
+				<%= classList[i]._creditHours %> Credits
+			</p> <!--.col -->
+		</div>
 
 		<div class="row">
 			<p class="col-md-10 text-justify col-md-push-1">
@@ -220,14 +229,17 @@
 		</div> <!--- .row ---!>
 
 		<div style="padding-top:5px;">
+		<div class="row">
 		<% if (classList[i]._preRequisites.length > 0) { %>
-			<div class="row">
-				<p class="col-md-push-1 col-md-10 text-justify">
+				<p class="col-md-push-1 col-md-4 text-justify">
 					Prerequisites:
 					<%= classList[i]._preRequisites %>
 				</p> <!--.col -->
-			</div>
 		<% } %>
+			<p class="col-md-4 col-md-pull-1 text-right pull-right">
+				<%= classList[i]._creditHours %> Credits
+			</p> <!--.col -->
+		</div>
 
 		<div class="row">
 			<p class="col-md-10 text-justify col-md-push-1">
@@ -285,14 +297,17 @@
 		</div> <!--- .row ---!>
 
 		<div style="padding-top:5px;">
+		<div class="row">
 		<% if (classList[i]._preRequisites.length > 0) { %>
-			<div class="row">
-				<p class="col-md-push-1 col-md-10 text-justify">
+				<p class="col-md-push-1 col-md-4 text-justify">
 					Prerequisites:
 					<%= classList[i]._preRequisites %>
 				</p> <!--.col -->
-			</div>
 		<% } %>
+			<p class="col-md-4 col-md-pull-1 text-right pull-right">
+				<%= classList[i]._creditHours %> Credits
+			</p> <!--.col -->
+		</div>
 
 		<div class="row">
 			<p class="col-md-10 text-justify col-md-push-1">
